# Bachelor_Navel

./: README.md
NavelTrajectory/: README.md
NavelTrajectory/webots_ros/: cartographer.sh  start_multiple.sh
NavelTrajectory/webots_ros/src/bspline_smoother/: smoother_plugin.xml
NavelTrajectory/webots_ros/src/bspline_smoother/src/: bspline.cpp
NavelTrajectory/webots_ros/src/my_package/: package.xml
NavelTrajectory/webots_ros/src/my_package/config/: slam_old.rviz
NavelTrajectory/webots_ros/src/my_package/config/nav/: nav2_params_MPC.yaml  nav2_params_MPC_Bspline.yaml
NavelTrajectory/webots_ros/src/my_package/launch/: navigation_launch.py
NavelTrajectory/webots_ros/src/my_package/my_package/: metric_logger.py  motion_detection.py  obstacle_avoider.py
NavelTrajectory/webots_ros/src/my_package/resource/: my_robot.urdf  pedestrian.urdf
NavelTrajectory/webots_ros/src/my_package/worlds/: zeki.wbt
NavelTrajectory/webots_ros/src/rrtstar_planner/: CHANGELOG.md  CMakeLists.txt
NavelTrajectory/webots_ros/test/: test_3_results.csv
webots_ros/: navigation.sh  start.sh  test.sh
webots_ros/install/: local_setup.sh  setup.sh
webots_ros/install/bspline_smoother/include/bspline_smoother/: bspline.hpp  bspline_smoother.hpp
webots_ros/install/bspline_smoother/share/ament_index/resource_index/nav2_core__pluginlib__plugin/: bspline_smoother
webots_ros/install/bspline_smoother/share/ament_index/resource_index/package_run_dependencies/: bspline_smoother
webots_ros/install/bspline_smoother/share/bspline_smoother/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
webots_ros/install/bspline_smoother/share/bspline_smoother/cmake/: ament_cmake_export_include_directories-extras.cmake  bspline_smootherConfig.cmake
webots_ros/install/my_package/lib/my_package/: metric_logger  motion_detector  navel_driver  obstacle_avoider  odom_publisher  pedestrian_driver  room_navigation  scan_republisher
webots_ros/install/my_package/share/my_package/: package.sh
webots_ros/install/my_package/share/my_package/config/: map_zeki.yaml  nav2_params_Bspline.yaml  nav2_params_Thesis.yaml  nav_to_pose_w_replanning_and_recovery_base.xml  navel_cartographer.lua  room_waypoints.yaml  slam.rviz
webots_ros/install/my_package/share/my_package/launch/: cartographer_launch.py
webots_ros/install/my_package/share/my_package/resource/: pedestrian2.urdf
webots_ros/install/rrtstar_planner/share/rrtstar_planner/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh  rrtstar_plugin.xml
webots_ros/install/rrtstar_planner/share/rrtstar_planner/cmake/: rrtstar_plannerConfig.cmake
webots_ros/log/: latest_build
webots_ros/src/bspline_smoother/: CMakeLists.txt  package.xml
webots_ros/src/bspline_smoother/src/: bspline_smoother.cpp
webots_ros/src/my_package/: setup.py
webots_ros/src/my_package/config/: nav_to_pose_w_replanning_and_recovery.xml
webots_ros/src/my_package/config/nav/: nav2_params.yaml  nav2_params_RRT.yaml
webots_ros/src/my_package/launch/: multiple_robot_launch.py  robot_launch.py  szenario_launch.py
webots_ros/src/my_package/my_package/: odom_publisher.py  room_navigation.py
webots_ros/src/my_package/resource/: pedestrian3.urdf
webots_ros/src/my_package/worlds/: zeki_multiple.wbt
webots_ros/src/rrtstar_planner/include/rrtstar_planner/: rrtstar_planner.hpp
webots_ros/src/rrtstar_planner/src/: rrtstar_planner.cpp
webots_ros/test/old_tests/: test_1_results.csv  test_2_results.csv
